--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lucide-react": "^0.454.0",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
@@ -58,11 +59,13 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
+    "yup": "^1.7.1",
     "zod": "3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
